# chatrs

./: Cargo.toml  api-tests.sh  readme.md
src/: app.rs  db.rs  lib.rs  main.rs
src/app/: auth.rs  chats.rs  mod.rs  rooms.rs  sessions.rs  users.rs
src/app/api/: auth.rs  chats.rs  mod.rs  rooms.rs  sessions.rs  users.rs
src/app/client/: mod.rs  root.html
